@@ -1,3 +1,8 @@
+Fri Sep 19 20:23:46 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>
+
+	* boarddim.h - reverse cube locations, gtkgame.c - micro-typo
+	  in dice drawing area
+	
 Fri Sep 19 19:53:02 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>
 
 	* Makefile.am, Makefile.in - add timer.c to sources
